--- a/style.css
+++ b/style.css
@@ -73,14 +73,14 @@ section
 .logoText
 {
   position: absolute;
-  top: 40px;
-  left: 100px;
-  font-size: 3em;
-  text-transform: uppercase;
-  color: #105603;
+  top: 20px;
+  left: 5px;
+  width: 30%;
+  height: auto;
+
   padding: 0 5px;
 }
-.banner .contentBx h4
+.banner .contentBx h4 
 {
   font-size: 1.5em;
   color: #333;
